Documentation: Updated some docs, pumped up version to doxygen
Former-commit-id: 8f715a7bf00deab36a1aaaddae4a7e5670712f76

--- a/README
+++ b/README
@@ -39,7 +39,9 @@ root of the repository
     + <ebml>
     + <socket>
     + ...
-
+ + <contrib> (third-party components, author retains code ownership)
+    + ...
+	
 Each software module is organized as a UNIX-like tree (empty folders not
 included):
 
